# eigen

./: Cargo.toml  flake.nix  readme.md
src/: ipc.rs  lib.rs  main.rs
src/css/: style.css
src/widgets/: mod.rs
src/widgets/battery/: mod.rs  style.css
src/widgets/clock/: mod.rs  style.css
src/widgets/dashboard/: mod.rs  style.css
src/widgets/desktop_menu/: mod.rs  style.css
src/widgets/launcher/: desktop.rs  mod.rs  style.css  trie.rs
src/widgets/workspaces/: mod.rs  provider.rs  style.css
