[package]
name = "eigen"
version = "0.1.0"
edition = "2024"
[lib]
name = "eigen"
path = "src/lib.rs"
[[bin]]
name = "eigen" 
path = "src/main.rs"
[dependencies]
battery = "0.7.8"
chrono = "0.4.42"
clap = { version = "4.6.1", features = ["derive"] }
# glib = "0.21.5"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
gtk4-layer-shell = "0.7.1"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
libc = "0.2"
niri-ipc = "26.4.0"
relm4 = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.145"

